[package]
name = "project-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.5.1"
dotenv = "0.15.0"
serde_json = "1"
futures = "0.3"
log = "0.4.21"
log4rs = "1.3.0"
rand = "0.8.5"
chrono = "0.4.37"
chrono-tz = "0.8.6"
